Correction probleme Collapse graph

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ footer {
 	background-color: rgba(114, 127, 140, 0.6);
 	position: absolute;
 	bottom: 5%;
-	left: 16.66%
+	left: 16.66%;
 }
 
 button.btn.btncol.collapsed:before
